优化下载逻辑使得抓取更加快速，优化下载中心增加失败下载，一键失败下载，新增搜索分类